// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Bids|BidButton default 1`] = `
Array [
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-outlined"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      $
      64.79
    </span>
    <span
      className="MuiTouchRipple-root"
    />
  </button>,
  "",
]
`;

exports[`Storyshots Bids|BidButton disabled 1`] = `
Array [
  <button
    className="MuiButtonBase-root MuiButtonBase-disabled MuiButton-root MuiButton-outlined MuiButton-disabled"
    disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="-1"
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      $
      64.79
    </span>
  </button>,
  "",
]
`;
